--- a/static/stylesheets/layout.css
+++ b/static/stylesheets/layout.css
@@ -16,6 +16,7 @@
 
 /* #Site Styles
 ================================================== */
+.button { width: 80%; margin-left: 10%; margin-right: 10%; text-align: center; }
 
 /* #Page Styles
 ================================================== */
